re-added eslint

--- a/client/app/auth/signin.html
+++ b/client/app/auth/signin.html
@@ -13,7 +13,7 @@
 
 </header>
 
-<div id='signin'>
+<div id="signin">
 
   <h2>Sign in using your GitHub account</h2>
   <h3>  Note: It <i>must</i> be the account associated with HRRB</h3>
